- Added ConfigurationReaderFactory for dynamic creation of ConfigurationReader - Enhanced caching mechanism to refresh configurations periodically - Improved error handling for null configuration data - Updated Swagger integration to allow dynamic parameter input for ApplicationName, ConnectionString, and refresh intervals

--- a/ConfigurationApp.ConfigManagement.API/appsettings.json
+++ b/ConfigurationApp.ConfigManagement.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\Omer; Initial Catalog=ConfigurationDB;"
   },
+  "ConfigurationSettings": {
+    "ApplicationName": "AppName",
+    "ConnectionString": "Data Source=(localdb)\\Omer; Initial Catalog=ConfigurationDB;", 
+    "RefreshTimerIntervalInMs": 60000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
