--- a/ConfigurationApp.ConfigManagement.API/ConfigurationApp.ConfigManagement.API.csproj
+++ b/ConfigurationApp.ConfigManagement.API/ConfigurationApp.ConfigManagement.API.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConfigurationApp.Business\ConfigurationApp.Business.csproj" />
+    <ProjectReference Include="..\ConfigurationApp.Library\ConfigurationApp.Library.csproj" />
   </ItemGroup>
 
 </Project>
